# vcpkg

my-ports/luajit/: 9997-options.patch  9998-install.patch  9999-mssdk+llvm-toolset-build.patch  CONTROL  portfile.cmake  vcpkg-cmake-wrapper.cmake
my-ports/soundtouch/: CMakeLists.txt  CONTROL  portfile.cmake  rc.patch  vcpkg-cmake-wrapper.cmake
my-triplets/: x64-windows-llvm.cmake  x64-windows.cmake
ports/freetype/: 9999-copyright-mark.patch  portfile.cmake
ports/libarchive/: 9999-mssdk+llvm-toolset-build.patch  portfile.cmake
ports/libiconv/: 9999-mssdk+llvm-toolset-build.patch  portfile.cmake
ports/libjpeg-turbo/: portfile.cmake  static-msvcrt.patch
ports/libpng/: 9999-mssdk+llvm-toolset-build.patch  portfile.cmake
ports/libwebp/: 9999-mssdk+llvm-toolset-build.patch  portfile.cmake
ports/libxml2/: 9999-mssdk+llvm-toolset-build.patch  CMakeLists.txt  portfile.cmake
ports/lz4/: CMakeLists.txt
ports/sdl2/: 9999-mssdk+llvm-toolset-build-HEAD.patch  9999-mssdk+llvm-toolset-build.patch  portfile.cmake
ports/tiff/: 9999-mssdk+llvm-toolset-build.patch  portfile.cmake
ports/zstd/: 9999-mssdk+llvm-toolset-build.patch  portfile.cmake
scripts/buildsystems/: applocal.cmake  vcpkg.cmake
scripts/buildsystems/msbuild/: applocal.ps1
scripts/cmake/: vcpkg_copy_tool_dependencies.cmake  vcpkg_llvm_clang.cmake
scripts/toolchains/: windows-llvm.cmake  windows.cmake
toolsrc/: CMakeLists.txt
toolsrc/src/vcpkg/base/: cofffilereader.cpp
